2002-04-29  Gary Thomas  <gthomas@redhat.com>

	* src/pcmb_misc.c (hal_pcmb_init): Disable NMI at this point since
	no real handlers are in place to handle it.  This fixes a problem
	with manual reset code for IDE drivers which can cause NMI.

2002-04-26  Bart Veer  <bartv@redhat.com>

	* support/gfxmode.c:
	A utility to find out what graphics modes are available on any
	given PC.

	* include/pcmb.inc:
	Change the graphics mode during RedBoot startup, when configured
	to do so.	

	* cdl/hal_i386_pcmb.cdl:
	Add new configuration option for changing the graphics mode
	during RedBoot startup.

2001-12-06  Nick Garnett  <nickg@redhat.com>

	* include/pcmb_serial.h: 
	* src/pcmb_serial.c:
	Added a simple validation test for serial devices. If the status
	register reads back all ones we decide that the device is absent
	and mark it invalid. We test this elsewhere to avoid touching the
	device again. This should help to cope with various problems with
	PCs that come with only one serial port.

2001-11-29  Jonathan Larmour  <jlarmour@redhat.com>

	* src/pcmb_screen.c: Restore sensible num lock behaviour after the
	last change.
	(KBScanTable): Fix scan table size.

2001-11-29 Trenton D. Adams  <tadams@theone.dnsalias.com>

	* src/pcmb_screen.c: Support numeric keypad and ctrl-alt-del for
	rebooting.

2001-11-23  Nick Garnett  <nickg@redhat.com>

	* include/pcmb_io.h (PC_WRITE_SCREEN): Wrap positions beyond end
	of screen back to start.
	
2001-11-01  Jonathan Larmour  <jlarmour@redhat.com>

	* src/pcmb_misc.c (hal_pcmb_init): Fix typo:
	CYGPKG_HAL_I386_PCMB_HAL_MEMSIZE_BIOS -> 
	CYGPKG_HAL_I386_PCMB_MEMSIZE_BIOS

2001-10-19  Ian Campbell  <icampbell@arcom.co.uk>

	* cdl/hal_i386_pcmb.cdl: Add cdl_options for
	CYGPKG_HAL_I386_PCMB_MEMSIZE to allow configuration of how memory
	is detected. Change CYGNUM_HAL_RTC_PERIOD to use default_value
	rather than calculated (so it can be overridden in the platform).
	* src/pcmb_misc.c: Implement CYGPKG_HAL_I386_PCMB_MEMSIZE